force-app/main/default/objects/OI_Impact_Cache__c/fields/Cache_Key__c.field-meta.xml
<CustomField>
    <fullName>Cache_Key__c</fullName>
    <label>Cache Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>hash(nodeKey + direction + depth + rootVersionChecksum) — folding the root's current checksum into the key means a new version produces a natural cache miss even without an explicit eviction, mirroring OI_GraphCache's L1 key convention. Used for upsert-by-external-id writes.</description>
</CustomField>