force-app/main/default/objects/OI_Impact_Cache__c/fields/Computed_At__c.field-meta.xml
<CustomField>
    <fullName>Computed_At__c</fullName>
    <label>Computed At</label>
    <type>DateTime</type>
    <required>true</required>
    <description>When this result was computed — informational, not itself the TTL check (see Expires_At__c).</description>
</CustomField>