force-app/main/default/objects/OI_Impact_Cache__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>Depth</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <description>The traversal depth this cached result was computed at — part of the cache key's identity (a shallower cached result is never reused to answer a deeper request).</description>
</CustomField>