force-app/main/default/objects/OI_Impact_Cache__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Forward</fullName><default>true</default><label>Forward</label></value>
            <value><fullName>Reverse</fullName><default>false</default><label>Reverse</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Which question this cached result answers — "what does this depend on" (Forward) or "what depends on this" (Reverse), GraphUI.md §19. Part of the cache key's identity alongside Cache_Key__c, never a single ambiguous "impact" row.</description>
</CustomField>