force-app/main/default/objects/OI_Impact_Cache__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <label>Expires At</label>
    <type>DateTime</type>
    <required>true</required>
    <description>TTL boundary (OI_Settings__mdt-configured, default kept short — recommend 30 minutes or less) — a row past this timestamp is treated as a miss and recomputed, never served stale.</description>
</CustomField>