force-app/main/default/objects/OI_Impact_Cache__c/fields/Manual_Test_Json1__c.field-meta.xml
<CustomField>
    <fullName>Manual_Test_Json1__c</fullName>
    <label>Cached Result Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
    <description
  >Compact serialized OI_ImpactResultDTO — a JSON string, never a live object graph (GraphEngine.md &#167;8's L1 caching convention applied here). Raised from 32,768 to LongTextArea's 131,072 max (2026-09-22): a high-fanout root (e.g. an object with dozens of permission-set grants) can serialize past 32,768 and fail the cache write with STRING_TOO_LONG. Secondary mitigation only — OI_DependencyEngineService.cacheResult catches a cache-write failure regardless of size, since even 131,072 is not a hard guarantee. The odd API name is a holdover from a live debugging session: THREE prior field-creation attempts on this object deployed via Metadata API but stayed invisible to SOQL/Apex, a confirmed platform-side quirk; this field was created via Setup UI instead, which worked. Renaming after creation isn't possible, so the name stays.</description>
</CustomField>